--- a/KarateTournamentManeger/Views/Admin/ManageUsers.cshtml
+++ b/KarateTournamentManeger/Views/Admin/ManageUsers.cshtml
@@ -23,7 +23,7 @@
                 <td>@user.Email</td>
                 <td>@user.CurrentRole</td>
                 <td>
-                    <button class="btn btn-primary btn-sm" data-bs-toggle="dropdown" aria-expanded="false">Избери</button>
+                    <button class="btn btn-primary dropdown-toggle btn-sm" data-bs-toggle="dropdown" aria-expanded="false">Избери</button>
                     <ul class="dropdown-menu">
                         @foreach (var role in user.AvailableRoles)
                         {
