--- a/KarateTournamentManeger/Views/Shared/_Layout.cshtml
+++ b/KarateTournamentManeger/Views/Shared/_Layout.cshtml
@@ -25,8 +25,18 @@
                         </li>
                         @if (User.IsInRole("Administrator"))
                         {
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-controller="Admin" asp-action="Index">Администратор</a>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle text-dark" href="#" id="adminDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    Администратор
+                                </a>
+                                <ul class="dropdown-menu" aria-labelledby="adminDropdown">
+                                    <li>
+                                        <a class="dropdown-item" asp-controller="Admin" asp-action="Tournaments">Управление на турнири</a>
+                                    </li>
+                                    <li>
+                                        <a class="dropdown-item" asp-controller="Admin" asp-action="ManageUsers">Управление на потребители</a>
+                                    </li>
+                                </ul>
                             </li>
                         }                        
                         @if (User.IsInRole("TimerManager"))
