--- a/KarateTournamentManeger/Views/Shared/_Layout.cshtml
+++ b/KarateTournamentManeger/Views/Shared/_Layout.cshtml
@@ -31,24 +31,34 @@
                                 </a>
                                 <ul class="dropdown-menu" aria-labelledby="adminDropdown">
                                     <li>
-                                        <a class="dropdown-item" asp-controller="Admin" asp-action="Tournaments">Управление на турнири</a>
+                                        <a class="dropdown-item" asp-controller="Admin" asp-action="Tournaments">Турнири</a>
                                     </li>
                                     <li>
-                                        <a class="dropdown-item" asp-controller="Admin" asp-action="ManageUsers">Управление на потребители</a>
+                                        <a class="dropdown-item" asp-controller="Admin" asp-action="ManageUsers">Потребители</a>
                                     </li>
                                 </ul>
                             </li>
-                        }                        
+                        }
                         @if (User.IsInRole("TimerManager"))
                         {
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-controller="Admin" asp-action="Index">Табло за управление</a>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle text-dark" href="#" id="managerDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    Мениджър
+                                </a>
+                                <ul class="dropdown-menu" aria-labelledby="managerDropdown">
+                                    <li>
+                                        <a class="dropdown-item" asp-controller="TimerManager" asp-action="Tournaments">Турнири</a>
+                                    </li>
+                                    <li>
+                                        <a class="dropdown-item" asp-controller="TimerManager" asp-action="Matches">Срещи</a>
+                                    </li>
+                                </ul>
                             </li>
                         }
-                         @if (User.IsInRole("Participant"))
+                        @if (User.IsInRole("Participant"))
                         {
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-controller="Admin" asp-action="Index">Мойте срещи</a>
+                            <li class="nav-item" dropdown>
+                                <a class="nav-link dropdown-toggle text-dark" asp-controller="Admin" asp-action="Index">Мойте срещи</a>
                             </li>
                         }
 
@@ -66,7 +76,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2024 - 
+            &copy; 2024 -
             @if (@DateTime.Now.Year != 2024)
             {
                 @DateTime.Now.Year
