--- a/KarateTournamentManeger/Views/Admin/StageDetails.cshtml
+++ b/KarateTournamentManeger/Views/Admin/StageDetails.cshtml
@@ -22,7 +22,7 @@
                 <td>@match.Participant2Name</td>
                 <td>@match.Participant1Score : @match.Participant2Score</td>
                 <td>@match.Period</td>
-                <td>@match.RemainingTime</td>
+                <td>@match.Timer.CountdownTime</td>
                 <td>@match.Status</td>
                 <td>@(match.Participant1Score > match.Participant2Score ? match.Participant1Name : match.Participant2Name)</td>
             </tr>
