--- a/KarateTournamentManeger/Views/TimerManager/ManageMatch.cshtml
+++ b/KarateTournamentManeger/Views/TimerManager/ManageMatch.cshtml
@@ -1,66 +1,62 @@
 ﻿@model KarateTournamentManager.Models.ViewModels.MatchViewModel
 
+
 <h1>Управление на мача</h1>
-
-<div>
-    <h3>Участници</h3>
-    <p>@Model.Participant1Name срещу @Model.Participant2Name</p>
-</div>
-
-<div>
-    <h3>Резултат</h3>
-    <p>
-        @Model.Participant1Name: <span id="participant1Score">@Model.Participant1Score точки</span>
-        <button onclick="updateScore('@Model.Id', 'Participant1', 1)">+1</button>
-        <button onclick="updateScore('@Model.Id', 'Participant1', 2)">+2</button>
-        <button onclick="updateScore('@Model.Id', 'Participant1', 3)">+3</button>
-        <button id="participant1Minus1" @(Model.Participant1Score < 1 ? "disabled" : "") onclick="updateScore('@Model.Id', 'Participant1', -1)">-1</button>
-        <button id="participant1Minus2" @(Model.Participant1Score < 2 ? "disabled" : "") onclick="updateScore('@Model.Id', 'Participant1', -2)">-2</button>
-        <button id="participant1Minus3" @(Model.Participant1Score < 3 ? "disabled" : "") onclick="updateScore('@Model.Id', 'Participant1', -3)">-3</button>
-    </p>
-    <p>
-        @Model.Participant2Name: <span id="participant2Score">@Model.Participant2Score точки</span>
-        <button onclick="updateScore('@Model.Id', 'Participant2', 1)">+1</button>
-        <button onclick="updateScore('@Model.Id', 'Participant2', 2)">+2</button>
-        <button onclick="updateScore('@Model.Id', 'Participant2', 3)">+3</button>
-        <button id="participant2Minus1" @(Model.Participant2Score < 1 ? "disabled" : "") onclick="updateScore('@Model.Id', 'Participant2', -1)">-1</button>
-        <button id="participant2Minus2" @(Model.Participant2Score < 2 ? "disabled" : "") onclick="updateScore('@Model.Id', 'Participant2', -2)">-2</button>
-        <button id="participant2Minus3" @(Model.Participant2Score < 3 ? "disabled" : "") onclick="updateScore('@Model.Id', 'Participant2', -3)">-3</button>
-    </p>
-
-</div>
-
-
-@* <div>
-    <h3>Управление на таймера</h3>
-    <p>Оставащо време: @Model.RemainingTime</p>
-    <button onclick="startTimer('@Model.Id')">Старт</button>
-    <button onclick="stopTimer('@Model.Id')">Стоп</button>
-    <input type="number" id="duration" placeholder="Продължителност (секунди)" />
-    <button onclick="setDuration('@Model.Id')">Задай продължителност</button>
-</div> *@
-    <div>
-        <h3>Оставащо време</h3>
-        <div id="timer">02:00</div>
-        <button onclick="startTimerLoop('@Model.Id')">Старт на таймера</button>
-        <button onclick="stopTimerLoop()">Стоп на таймера</button>
+<div class="card">
+    <div class="card-header">
+        <strong>@Model.Participant1Name срещу @Model.Participant2Name</strong>
     </div>
-<div>
-    <h3>Управление на таймера</h3>
-    <input type="number" id="duration" placeholder="Продължителност (секунди)" />
-    <button onclick="setTimerDuration('@Model.Id', document.getElementById('duration').value)">Създай и стартирай таймер</button>
+    <div class="card-body">
+        <table class="table table-striped">
+            <thead>
+                <tr>
+                    <th>Участник</th>
+                    <th>Точки</th>
+                    <th></th>
+                    <th>Екшън</th>
+                </tr>
+            </thead>
+            <tbody>
+
+                <tr>
+                    <td>@Model.Participant1Name</td>
+                    <td><span id="participant1Score">@Model.Participant1Score</span></td>
+                    <td>
+                        <button type="button" class="btn btn-success btn-sm" onclick="updateScore('@Model.Id', 'Participant1', 1)">+1</button>
+                        <button type="button" class="btn btn-success btn-sm" onclick="updateScore('@Model.Id', 'Participant1', 2)">+2</button>
+                        <button type="button" class="btn btn-success btn-sm" onclick="updateScore('@Model.Id', 'Participant1', 3)">+3</button>
+                        <button type="button" class="btn btn-danger btn-sm" id="participant1Minus1" @(Model.Participant1Score < 1 ? "disabled" : "") onclick="updateScore('@Model.Id', 'Participant1', -1)">-1</button>
+                        <button type="button" class="btn btn-danger btn-sm" id="participant1Minus2" @(Model.Participant1Score < 2 ? "disabled" : "") onclick="updateScore('@Model.Id', 'Participant1', -2)">-2</button>
+                        <button type="button" class="btn btn-danger btn-sm" id="participant1Minus3" @(Model.Participant1Score < 3 ? "disabled" : "") onclick="updateScore('@Model.Id', 'Participant1', -3)">-3</button>
+                    </td>
+                    <td><button type="button" class="btn btn-warning btn-sm" onclick="setWinner('@Model.Id', '@Model.Participant1Id')">Победител</button></td>
+                </tr>
+                <tr>
+                    <td>@Model.Participant2Name</td>
+                    <td><span id="participant2Score">@Model.Participant2Score</span></td>
+                    <td>
+                        <button type="button" class="btn btn-success btn-sm" onclick="updateScore('@Model.Id', 'Participant2', 1)">+1</button>
+                        <button type="button" class="btn btn-success btn-sm" onclick="updateScore('@Model.Id', 'Participant2', 2)">+2</button>
+                        <button type="button" class="btn btn-success btn-sm" onclick="updateScore('@Model.Id', 'Participant2', 3)">+3</button>
+                        <button type="button" class="btn btn-danger btn-sm" id="participant2Minus1" @(Model.Participant2Score < 1 ? "disabled" : "") onclick="updateScore('@Model.Id', 'Participant2', -1)">-1</button>
+                        <button type="button" class="btn btn-danger btn-sm" id="participant2Minus2" @(Model.Participant2Score < 2 ? "disabled" : "") onclick="updateScore('@Model.Id', 'Participant2', -2)">-2</button>
+                        <button type="button" class="btn btn-danger btn-sm" id="participant2Minus3" @(Model.Participant2Score < 3 ? "disabled" : "") onclick="updateScore('@Model.Id', 'Participant2', -3)">-3</button>
+                    </td>
+                    <td><button type="button" class="btn btn-warning btn-sm" onclick="setWinner('@Model.Id', '@Model.Participant2Id')">Победител</button></td>
+                </tr>
+            </tbody>
+        </table>
+        <div>
+            <h3>Управление на таймера</h3>
+
+            <p>Оставащо време: <span id="timerDisplay">@Model.Timer?.CountdownTime.ToString("mm\\:ss")</span></p>
+            <button type="button" class="btn btn-primary btn-sm" id="startTimerButton" onclick="startTimer('@Model.Id')">Старт</button>
+            <button type="button" class="btn btn-primary btn-sm" id="stopTimerButton" onclick="stopTimer('@Model.Id')">Стоп</button>
+        </div>
+    </div>
 </div>
 
-<div>
-    <h3>Допълнителна част</h3>
-    <button onclick="addExtraPeriod('@Model.Id')">Добави допълнителна част</button>
-</div>
 
-<div>
-    <h3>Определяне на победител</h3>
-    <button onclick="setWinner('@Model.Id', 'Participant1')">Определи @Model.Participant1Name за победител</button>
-    <button onclick="setWinner('@Model.Id', 'Participant2')">Определи @Model.Participant2Name за победител</button>
-</div>
 
 <script>
     // Динамично генерирани пътища от Razor
@@ -73,7 +69,8 @@
         setWinner: '@Url.Action("SetWinner", "TimerManager")'
     };
 
-    async function sendAjaxRequest(url, data) {
+    async function sendAjaxRequest(url, data, action) {
+        console.log(matchId, participantId);
         try {
             const response = await fetch(url, {
                 method: "POST",
@@ -83,82 +80,105 @@
                 body: JSON.stringify(data)
             });
 
-            if (!response.ok) throw new Error("Server Error");
+            if (!response.ok) {
+                throw new Error("Server Error");
+            }
 
             const result = await response.json();
-            console.log("Response from server:", result); // Проверка на отговора
-            updateUI(result.participant1Score, result.participant2Score);
+            updateUI(result.participant1Score, result.participant2Score, result.action);
+
         } catch (error) {
             alert('Грешка: ' + error.message);
         }
     }
 
-    // JavaScript функции за извикване на сървърните маршрути
+    function setWinner(matchId, participantId) {
+    fetch('/TimerManager/setwinner', {
+        method: 'POST',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify({ matchId, winnerId: participantId })
+    })
+    .then(response => response.json())
+    .then(data => {
+        if (data.success) {
+            alert(data.message);
+        } else {
+            alert(`Error: ${data.message}`);
+        }
+    })
+    .catch(error => {
+        console.error('Error:', error);
+        alert('Възникна грешка на сървъра.');
+    });
+}
+
     function updateScore(matchId, participant, points) {
         sendAjaxRequest(urls.updateScore, { matchId, participant, points });
     }
 
-    let timerInterval;
+    let countdownInterval;
+    let countdownTime = @Model.Timer?.CountdownTime.TotalSeconds ?? 0;
+    function startTimer(matchId) {
+        sendAjaxRequest(urls.startTimer, { matchId });
 
-    async function fetchTimerState(matchId) {
-        try {
-            const response = await fetch(`/api/timer/state/${matchId}`);
-            const result = await response.json();
-
-            if (result.success) {
-                const remainingTime = result.remainingTimeInSeconds;
-                updateTimerUI(remainingTime);
+        countdownInterval = setInterval(() => {
+            if (countdownTime > 0) {
+                countdownTime--;
+                updateTimeDisplay(countdownTime);
             } else {
-                console.log("Таймерът не е намерен");
+                clearInterval(countdownInterval);
             }
-        } catch (error) {
-            console.error('Грешка при извличане на таймера:', error);
+        }, 1000);
+    }
+
+    function stopTimer(matchId) {
+        sendAjaxRequest(urls.stopTimer, { matchId });
+
+        clearInterval(countdownInterval);
+        updateTimeDisplay(countdownTime);
+    }
+
+    function updateTimeDisplay(timeInSeconds) {
+        const minutes = Math.floor(timeInSeconds / 60);
+        const seconds = (timeInSeconds % 60).toFixed(0);
+        document.getElementById("timerDisplay").innerText = `${padZero(minutes)}:${padZero(seconds)}`;
+    }
+
+    function padZero(num) {
+        return num < 10 ? `0${num}` : num;
+    }
+
+    function updateUI(participant1Score, participant2Score, action) {
+        if (action === "updateScore") {
+
+            document.querySelector("#participant1Score").innerText = participant1Score;
+            document.querySelector("#participant2Score").innerText = participant2Score;
+
+            updateButtonState("#participant1Minus1", participant1Score >= 1);
+            updateButtonState("#participant1Minus2", participant1Score >= 2);
+            updateButtonState("#participant1Minus3", participant1Score >= 3);
+
+            updateButtonState("#participant2Minus1", participant2Score >= 1);
+            updateButtonState("#participant2Minus2", participant2Score >= 2);
+            updateButtonState("#participant2Minus3", participant2Score >= 3);
+
+        } else if (action === "startTimer") {
+
+            updateButtonState("#startTimerButton", false);
+            updateButtonState("#stopTimerButton", true);
+        } else if (action === "stopTimer") {
+
+            updateButtonState("#startTimerButton", true);
+            updateButtonState("#stopTimerButton", false);
+        }
+        function updateButtonState(buttonSelector, isEnabled) {
+            const button = document.querySelector(buttonSelector);
+            if (button) {
+                button.disabled = !isEnabled;
+            }
         }
     }
 
-    function updateTimerUI(remainingSeconds) {
-        const timerElement = document.getElementById('timer');
-        const minutes = Math.floor(remainingSeconds / 60);
-        const seconds = remainingSeconds % 60;
-        timerElement.innerText = `${minutes.toString().padStart(2, '0')}:${seconds.toString().padStart(2, '0')}`;
-    }
-
-    function startTimerLoop(matchId) {
-        fetchTimerState(matchId);
-        timerInterval = setInterval(() => fetchTimerState(matchId), 1000);
-    }
-
-    function stopTimerLoop() {
-        clearInterval(timerInterval);
-    }
-
-
-    function addExtraPeriod(matchId) {
-        sendAjaxRequest(urls.addExtraPeriod, { matchId });
-    }
-
-    function setWinner(matchId, participant) {
-        sendAjaxRequest(urls.setWinner, { matchId, participant });
-    }
-
-
-    function updateUI(participant1Score, participant2Score) {
-        document.querySelector("#participant1Score").innerText = participant1Score + " точки";
-        document.querySelector("#participant2Score").innerText = participant2Score + " точки";
-
-        updateButtonState("#participant1Minus1", participant1Score >= 1);
-        updateButtonState("#participant1Minus2", participant1Score >= 2);
-        updateButtonState("#participant1Minus3", participant1Score >= 3);
-
-        updateButtonState("#participant2Minus1", participant2Score >= 1);
-        updateButtonState("#participant2Minus2", participant2Score >= 2);
-        updateButtonState("#participant2Minus3", participant2Score >= 3);
-    }
-
-    function updateButtonState(buttonSelector, isEnabled) {
-        const button = document.querySelector(buttonSelector);
-        if (button) {
-            button.disabled = !isEnabled;
-        }
-    }
 </script>
+
+
