--- a/KarateTournamentManeger/Views/Shared/_Layout.cshtml
+++ b/KarateTournamentManeger/Views/Shared/_Layout.cshtml
@@ -58,7 +58,7 @@
                         @if (User.IsInRole("Participant"))
                         {
                             <li class="nav-item" dropdown>
-                                <a class="nav-link dropdown-toggle text-dark" asp-controller="Admin" asp-action="Index">Мойте срещи</a>
+                                <a class="nav-link text-dark" asp-controller="Participant" asp-action="Matches">Мойте срещи</a>
                             </li>
                         }
 
