--- a/KarateTournamentManeger/Views/Admin/TournamentDetails.cshtml
+++ b/KarateTournamentManeger/Views/Admin/TournamentDetails.cshtml
@@ -47,7 +47,7 @@
                             var lastName = @tatami.TimerManager.LastName;
                             var interpolatedString = $"{firstName} {lastName}";
 
-                            @interpolatedString
+                            @interpolatedString;
                         }
                         else
                         {
